base/builds/regulus/argocd/projects/landingpage/manifests/homarr/Deployment-homarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: homarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: homarr
      app.kubernetes.io/name: homarr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: homarr
        app.kubernetes.io/name: homarr
    spec:
      containers:
      - name: homarr
        image: ghcr.io/homarr-labs/homarr:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        ports:
        - containerPort: 7575
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /appdata
          name: homarr-config
      volumes:
      - name: homarr-config
        persistentVolumeClaim:
          claimName: homarr-config
