base/builds/regulus/argocd/projects/landingpage/manifests/homarr/Service-homarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  namespace: homarr
spec:
  ports:
  - name: http
    port: 7575
    protocol: TCP
    targetPort: 7575
  selector:
    app.kubernetes.io/instance: homarr
    app.kubernetes.io/name: homarr
  type: ClusterIP
